      correctly, e.g., in subsetting and subassignments.  Such objects
      are now documented.

      \item Package repositories in \code{getOption("repos")} are now
      initialized from the \file{repositories} file when \pkg{utils} is
      loaded (if not already set, e.g., in \file{.Rprofile}).
      (From a report and patch proposal by Gabriel Becker in \PR{18405}.)
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The included LAPACK sources have been updated to include the
      four Fortran 90 routines rather than their Fortran 77
      predecessors.  This may give some different signs in SVDs or
      eigendecompositions..  (This completes the transition to LAPACK
      3.10.x begun in \R 4.2.0.)

      \item A system installation of generic LAPACK 3.10.0 or later will
      be preferred to the version in the \R sources.

      \command{configure} option \option{--with-lapack=no} (equivalently
      \option{--without-lapack}) forces compilation of the internal
      LAPACK sources.

      If \option{--with-lapack} is not specified, a system
      \code{liblapack} is looked for and used if it reports version
      3.10.0 or later and does not contain BLAS routines.

      Packages using LAPACK will need to be reinstalled if this changes
      to using an external library.

      \item On \samp{aarch64} (aka \samp{arm64}) platforms such as Macs with
      \dQuote{Apple silicon} (\sQuote{M1}), \command{configure} now chooses
      \option{-fPIC} by default (instead of \option{-fpic}), as desired in
      \PR{18326}.

      \item There is some support for using the native date-time
      routines on macOS: this is only viable on recent versions
      (e.g.\sspace{}12.6) and does get some historical changes wrong.

      \item \command{configure} now checks coversion of datetimes
      between \code{POSIXlt} and \code{POSIXct} around year 2020.  Failure
      (which has been seen on platforms missing \code{tzdata}) is fatal.